<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <!-- Login Fragment -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.primeravance.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Main Tab Fragments -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.primeravance.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.primeravance.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.primeravance.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <!-- Welcome Fragment (for future use) -->
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.primeravance.ui.welcome.WelcomeFragment"
        android:label="Welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcome_to_store"
            app:destination="@id/storeFragment" />
    </fragment>

    <!-- Store Fragment (for future use) -->
    <fragment
        android:id="@+id/storeFragment"
        android:name="com.example.primeravance.ui.store.StoreFragment"
        android:label="Store"
        tools:layout="@layout/fragment_store" />

</navigation>
